feat: simplify request format for some interfaces BREAKING CHANGE: This commit introduces request format changes for (previous) POST /portal/user & POST /portal/bucket interfaces. See openapi.yaml for new API reference.
