# app/Http/Controllers/BucketController.php
@@ -18,49 +18,51 @@ class BucketController extends Controller
 
     public function create(Request $request, ClickHouseServiceInterface $ClickHouse)
     {
-        if (!$request->has('name') || !$request->has('structure')) {
+        if (!$request->isJson()) {
+            return response()->json(['code' => 400, 'message' => 'Bad Request: invalid body format.'])->setStatusCode(400);
+        }
+        if (empty($data = $request->json()->all())) {
+            return response()->json(['code' => 400, 'message' => 'Bad Request: failed to parse request body json.'])->setStatusCode(400);
+        }
+        if (!isset($data['name']) || !isset($data['structure'])) {
             return response()->json(['code' => 400, 'message' => 'Bad Request: missing parameters.'])->setStatusCode(400);
         }
         if ($this->user['admin']) {
             return response()->json(['code' => 403, 'message' => 'Forbidden: please access this interface as a normal user, not admin.'])->setStatusCode(403);
         }
-        if (!$structure = json_decode($request->input('structure'), true)) {
-            return response()->json(['code' => 400, 'message' => 'Bad Request: failed to parse structure json.'])->setStatusCode(400);
+        if (!isset($data['structure']['columns']) || !isset($data['structure']['date_column']) || !isset($data['structure']['primary_keys'])) {
+            return response()->json(['code' => 400, 'message' => 'Bad Request: missing object in structure.'])->setStatusCode(400);
         }
-        if (!isset($structure['columns']) || !isset($structure['date_column']) || !isset($structure['primary_keys'])) {
-            return response()->json(['code' => 400, 'message' => 'Bad Request: missing index in structure json.'])->setStatusCode(400);
-        }
-        $name = $request->input('name');
         if (!$ClickHouse->connect()) {
             return response()->json(['code' => 500, 'message' => 'Server Error: Failed to connect to database, try again later.'])->setStatusCode(500);
         }
         try {
-            $bucket_uuid = (string)Uuid::generate();
+            $bucket_id = (string)Uuid::generate();
         } catch (Exception $e) {
             return response()->json(['code' => 500, 'message' => 'Server Error: Failed to generate UUID, try again later.'])->setStatusCode(500);
         }
-        $createTable = $ClickHouse->createTable('data_' . $bucket_uuid, $structure['columns'], $structure['date_column'], $structure['primary_keys']);
+        $createTable = $ClickHouse->createTable('data_' . $bucket_id, $data['structure']['columns'], $data['structure']['date_column'], $data['structure']['primary_keys']);
         if (!$createTable[0]) {
             return response()->json(['code' => 400, 'message' => 'Database Error: ' . $createTable[1]])->setStatusCode(400);
         }
-        $createBuffer = $ClickHouse->createBuffer('buffer_' . $bucket_uuid, 'data_' . $bucket_uuid, 2, 30, 2, 10, 1, 10000);
+        $createBuffer = $ClickHouse->createBuffer('buffer_' . $bucket_id, 'data_' . $bucket_id, 2, 30, 2, 10, 1, 10000);
         if (!$createBuffer[0]) {
-            $dropTable = $ClickHouse->dropTable('data_' . $bucket_uuid);
+            $dropTable = $ClickHouse->dropTable('data_' . $bucket_id);
             if (!$dropTable[0]) {
                 return response()->json(['code' => 400, 'message' => 'Database Error: ' . $dropTable[1]])->setStatusCode(400);
             }
             return response()->json(['code' => 400, 'message' => 'Database Error: ' . $createBuffer[1]])->setStatusCode(400);
         }
-        $tableSize = $ClickHouse->tableSize('data_' . $bucket_uuid);
+        $tableSize = $ClickHouse->tableSize('data_' . $bucket_id);
         if (!$tableSize[0]) {
             return response()->json(['code' => 400, 'message' => 'Database Error: ' . $tableSize[1]])->setStatusCode(400);
         }
         $bucket_stats = $tableSize[1];
-        Cache::forever('bucket_' . $bucket_uuid, ['name' => $name, 'user_id' => $this->user['id'], 'structure' => $structure]);
+        Cache::forever('bucket_' . $bucket_id, ['name' => $data['name'], 'user_id' => $this->user['id'], 'structure' => $data['structure']]);
         $user_data = Cache::get('user_' . $this->user['id']);
-        $user_data['buckets'][] = $bucket_uuid;
+        $user_data['buckets'][] = $bucket_id;
         Cache::forever('user_'. $this->user['id'], $user_data);
-        return response()->json(['code' => 200, 'data' => ['bucket' => ['id' => $bucket_uuid, 'name' => $name, 'structure' => $structure, 'stats' => $bucket_stats]], 'message' => 'OK'])->setStatusCode(200);
+        return response()->json(['code' => 200, 'data' => ['bucket' => ['id' => $bucket_id, 'name' => $data['name'], 'structure' => $data['structure'], 'stats' => $bucket_stats]], 'message' => 'OK'])->setStatusCode(200);
     }
 
     public function info(string $bucket_id, ClickHouseServiceInterface $ClickHouse)
